# meok-aaif-agent-card-mcp

./: .gitignore  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
meok_aaif_agent_card_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_aaif.py  test_server.py
