[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-aaif-agent-card-mcp"
version = "1.0.0"
description = "MEOK AAIF Agent Card MCP — Linux Foundation AAIF agent identity bridge. Issues + verifies + publishes /.well-known/agent-card. Bridges A2A and OASF to AAIF. First-mover for the AAIF identity spec. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "aaif", "linux-foundation", "agent-identity", "a2a", "oasf", "agent-card", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/a2a"
Repository = "https://github.com/CSOAI-ORG/meok-aaif-agent-card-mcp"

[project.scripts]
meok-aaif-agent-card-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
